data/derived/fa15/progs/unify/prog0493.ml.out
Characters 80-81:
  let fixpoint (f,b) = wwhile ((let f' b' = if (f b) = b then b else f b in f' b),b);;
                                                                                  ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
